2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am:
	* src/dh-history.c:
	* src/dh-history.h:
	- Removed
	* src/dh-html.c:
	- Added support for gecko's builtin history list.
	* src/dh-window.c:
	- Make history work again.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/dh-preferences.c:
	* ui/devhelp.glade:
	- Really make the dialog transient.
	* ui/window.ui: Hide Copy for now.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh: Require automake 1.8

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: Added schemas
	* configure.in: Added gconf tools
	* devhelp.schemas.in: Added
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h: 
	- Split a gtk font string
	* src/dh-html.c: (html_init): Don't set the font here.
	* src/dh-preferences.c:
	- Set fonts, supports using system fonts or override for devhelp.
	- Close button works
	- Setting transient to main window.
	* src/dh-window.c:
	- Set prefs window to be transient.
	* ui/devhelp.glade: Added Use system default button to prefs dialog.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Added libglade dependency
	* src/Makefile.am: Added includes and dh-preferences.[ch]
	* src/dh-base.c: (dh_base_new): initialize preferences
	* src/dh-gecko-utils.cpp: 
	- fixed set_font to work with both variable and fixed font width.
	* src/dh-preferences.c: 
	* src/dh-preferences.h:
	- Added, starting of a preference dialog and gconf storage.
	* src/dh-util.c:
	(tagify_bold_labels), (get_glade_file),
	(dh_glade_get_file), (dh_glade_connect): Copied from Gossip.
	* src/dh-window.c:
	(window_populate), (window_activate_quit),
	(window_activate_copy), (window_activate_preferences),
	(window_activate_back), (window_activate_forward),
	(window_activate_about): 
	- Splitted out action callbacks into their own functions instead of 
	  one.
	* ui/Makefile.am: Install glade
	* ui/devhelp.glade: Glade for preferences dialog
	* ui/window.ui: Added an edit menu.
